Fix bugs to ensure that text doesn't overflow in nav links

--- a/consentrecords/static/consentrecords/css/base.css
+++ b/consentrecords/static/consentrecords/css/base.css
@@ -48,6 +48,36 @@ panel.view {
 panel.edit {
 	background: #eee;
 }
+panel>nav>.left-link {
+	max-width: calc(100% - 48px);	/* Subtract 48 pixels to ensure it doesn't run into the right link */
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: left;
+	white-space: nowrap;
+}
+panel>nav>.right-link {
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: right;
+	white-space: nowrap;
+}
+nav .site-left-chevron {
+	height: 18px;
+}
+.site-left-chevron-span {
+	float: left;
+	width: 18px;
+	margin-top: -2px;
+}
+.site-left-chevron-span+div, .site-left-chevron-span+span {
+	display: block;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: left;
+	margin-left: 18px;	/* Same as the width of the .site-left-chevron-span, above. */
+} 
+
 panel.view>.panel-fill>header
 {
 	width: 100%;
